add first part html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <!--? conteiner dei bottoni -->
+     <div class="row gx-3 gy-2 align-items-center justify-content-center mt-4">
+        <div class="col-auto">
+            <!--* bottone per avviare il controllo invito -->
+            <button type="submit" class="btn btn-primary" id="btn-submit37">controllo invito</button>
+        </div>
+        <div class="col-auto">
+            <!--* bottone per avviare il gioco dei dadi -->
+            <button type="submit" class="btn btn-primary" id="btn-submit73">gioco dei dadi</button>
+        </div>
+        <div class="col-auto">
+            <!--* bottone per il reset -->
+            <button type="submit" class="btn btn-danger" id="btn-rest73">Annulla</button>
+        </div>
+    </div>
+    <!--? conteiner per la risposta e email -->
+    <div class="row gx-3 gy-2 align-items-center justify-content-center mt-4 " id="answer73">
+        <!--? input + risposta email -->
+       <div id="email-group">
+            <!--* input email -->
+            <div class="input-group flex-nowrap">
+                <input type="text" class="form-control" id = "email37" placeholder="email" aria-label="Username" aria-describedby="addon-wrapping">
+              </div>
+              <!--* bottone per inviare l'email' -->
+              <div class="col-auto">
+                <button type="submit" class="btn btn-primary" id="btn-submit733">controlla</button>
+            </div>
+            <div id="answer-email73">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
