add second part html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <!--? conteiner per la risposta e email -->
-    <div class="row gx-3 gy-2 align-items-center justify-content-center mt-4 " id="answer73">
+    <div class="row gx-3 gy-2 align-items-center justify-content-center mt-4 " id="">
         <!--? input + risposta email -->
        <div id="email-group">
             <!--* input email -->
@@ -39,7 +39,10 @@
             </div>
             <div id="answer-email73">
 
-            </div>
+            </div>        
+        </div>
+        <div id="answer73">
+            
         </div>
     </div>
 </body>
